force-app/main/default/objects/BMCServiceDesk__Encryption_Report__c/BMCServiceDesk__Encryption_Report__c.object-meta.xml
<CustomObject>
    <description>Lists the encrypted fields that are used in query conditions (such as QuickViews and Lookup Filters) and the fields of type Text Area (Rich) in Service Request Definitions</description>
    <label>Encryption Report</label>
    <nameField>
        <label>Encryption Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Encryption Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>