force-app/main/default/objects/BMCServiceDesk__Encryption_Report__c/fields/BMCServiceDesk__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Field_Type__c</fullName>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Encrypted</fullName>
            </value>
            <value>
                <fullName>Text Area (Rich)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>