force-app/main/default/objects/BMCServiceDesk__Encryption_Report__c/fields/BMCServiceDesk__Impacted_Feature__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Impacted_Feature__c</fullName>
    <label>Impacted Feature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>