force-app/main/default/objects/BMCServiceDesk__Encryption_Report__c/fields/BMCServiceDesk__QuickView_Owner__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__QuickView_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuickView Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Encryption_Report</relationshipName>
    <type>Lookup</type>
</CustomField>