force-app/main/default/objects/BMCServiceDesk__Encryption_Report__c/fields/BMCServiceDesk__Recommendation__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Recommendation__c</fullName>
    <label>Recommendation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>