force-app/main/default/objects/BMCServiceDesk__Encryption_Report__c/fields/BMCServiceDesk__Severity__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>